// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useIconGenerator returned function returns the icon when icon is animated 1`] = `
<Icon
  animate={true}
  data={
    Object {
      "iconClass": "icon-class",
      "type": "glyph",
    }
  }
  loading={false}
/>
`;

exports[`useIconGenerator returned function without icon animated returns the collapse icon when expanded 1`] = `
<Icon
  animate={false}
  data={
    Object {
      "iconClass": "collapse-icon-class",
      "type": "glyph",
    }
  }
  loading={false}
/>
`;

exports[`useIconGenerator returned function without icon animated returns the expand icon when collapsed 1`] = `
<Icon
  animate={false}
  data={
    Object {
      "iconClass": "expand-icon-class",
      "type": "glyph",
    }
  }
  loading={false}
/>
`;
